Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1553

kudu client crash when "greater equal"/"less equal" and "equal" predicate send to kudu-client same time.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.10.0
    • client
    • None

    Description

      Execute below sql will cause impala crash, which is root caused by kudu-client crash.
      [ impala-shell ] > desc hash_test;
      Query: describe hash_test
      ----------------------------

      name type comment

      ----------------------------

      day string  
      message_id int  
      message string  
      timebegin timestamp  

      ----------------------------

      [ impala-shell ] > select * from hash_test where message_id >0;
      Query: select * from hash_test where message_id >0
      -----------------------------------------+

      day message_id message timebegin

      -----------------------------------------+

      1 2 3 2016-07-02 08:00:11

      -----------------------------------------+
      This select sql cause crash:
      > select * from hash_test where message_id >0 and message_id=1;
      Query: select * from hash_test where message_id >0 and message_id=1
      while this not:
      > select * from hash_test where message_id >2 and message_id=1;
      Query: select * from hash_test where message_id >2 and message_id=1

      Fetched 0 row(s) in 0.24s

      Attachments

        Activity

          People

            bruceSz zhangsong
            bruceSz zhangsong
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: