KUDU-1553: Crash when specifying multiple unbounded range predicates on a column

The Kudu client and tablet server will crash when a scan specifies multiple
predicates on a column, with at least one of the predicates being a one-sided
range predicate. For instance:

    SELECT * WHERE a > 10 && a = 200;
    SELECT * WHERE a <= 10 &&  a = 5;

will both trigger this crash.

Change-Id: I0f8b21087ba6046f673af9d79b3a60bf8e645cce
Reviewed-on: http://gerrit.cloudera.org:8080/3945
Tested-by: Kudu Jenkins
Reviewed-by: Todd Lipcon <todd@apache.org>